<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:padding="20dp">

    <TextView
        android:text="@string/sorting_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sort_text"
        android:textSize="24sp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:orientation="horizontal">
        <TextView
            android:text="@string/firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/first_text"
            android:textSize="18sp"/>



        <RadioButton
            android:id="@+id/first_ASC_radioButton"
            android:text="A-Z"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" />

        <RadioButton
            android:layout_toEndOf="@+id/first_ASC_radioButton"
            android:text="Z-A"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/first_DESC_radioButton"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:orientation="horizontal">
        <TextView
            android:text="@string/lastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/last_text"
            android:textSize="18sp"/>

        <RadioButton
            android:id="@+id/last_ASC_radioButton"
            android:text="A-Z"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:checked="true"/>

        <RadioButton
            android:layout_toEndOf="@+id/last_ASC_radioButton"
            android:text="Z-A"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/last_DESC_radioButton"/>

    </LinearLayout>

    <TextView
        android:text=""
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/empty"
        android:textSize="24sp"/>

    <TextView
        android:text="@string/filter_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/filter_text"
        android:textSize="24sp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:orientation="vertical">

        <TextView
            android:text="@string/gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/filter_gender"
            android:textSize="18sp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/filter_female_radioButton"
                android:text="@string/female"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" />

            <RadioButton
                android:layout_toEndOf="@+id/filter_female_radioButton"
                android:id="@+id/filter_male_radioButton"
                android:text="@string/male"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"

                />

            <RadioButton
                android:id="@+id/filter_unknown_radioButton"
                android:text="@string/unknown"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:orientation="vertical">

        <TextView
            android:text="@string/country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/filter_country_text"
            android:textSize="18sp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:orientation="horizontal">

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/country_disabled_radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/country_disabled_radioButton" />

            <RadioButton
                android:id="@+id/country_enabled_radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/country_enabled_radioButton"/>


        </RadioGroup>

        </LinearLayout>



    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:orientation="horizontal">


        <Spinner
            android:id="@+id/country_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>