<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- The main content view -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:layout_gravity="top|start"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            android:layout_width="match_parent">

        </android.support.v7.widget.Toolbar>

        <android.support.design.widget.CoordinatorLayout
            android:id="@+id/content_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ListView
                android:id="@+id/contactList"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </ListView>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/addNew"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_margin="16dp"
                app:layout_anchor="@id/contactList"
                app:layout_anchorGravity="bottom|right|end"
                android:src="@drawable/ic_add_black_24dp"
                android:scaleType="center"/>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/addFilter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_margin="16dp"
                app:layout_anchor="@id/contactList"
                app:layout_anchorGravity="bottom|left|end"
                android:onClick="openFilter"
                android:src="@drawable/expand_more_icon" />

        </android.support.design.widget.CoordinatorLayout>

    </LinearLayout>



    <!-- The navigation drawer -->
    <ListView android:id="@+id/left_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        android:paddingLeft="10dp"
        android:background="#5f91e2" />
</android.support.v4.widget.DrawerLayout>