<?xml version="1.0" encoding="utf-8"?>
<ListView xmlns:android="http://schemas.android.com/apk/res/android"

    android:id="@+id/home_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:choiceMode="singleChoice"
    android:scrollbarStyle="outsideOverlay"
    android:paddingBottom="80dp"
    android:clipToPadding="false"
    android:divider="@android:color/transparent"
    android:dividerHeight="0dp"
    android:background="#eee">

</ListView>